--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
 body {margin:0;}
-        
+
+p{
+    font-size: 14px;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: red;
   position: fixed;
   top: 0;
   width: 100%;
@@ -24,9 +28,9 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #111;
+  background-color: black;
 }
 
 .active {
-  background-color: #4CAF50;
+  background-color: red;
 }
