--- a/css/about.css
+++ b/css/about.css
@@ -1,15 +1,11 @@
 body {margin:0;}
-
-p{
-    font-size: 14px;
-}
-
+        
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: red;
+  background-color: #333;
   position: fixed;
   top: 0;
   width: 100%;
@@ -28,7 +24,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: black;
+  background-color: #111;
 }
 
 .active {
