--- a/css/input.css
+++ b/css/input.css
@@ -1,9 +1,37 @@
 body {margin:0;}
         
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
-.list{
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
   background-color: red;
 }
+
 input[type=text], select {
   width: 100%;
   padding: 12px 20px;
@@ -32,9 +60,5 @@ input[type=submit]:hover {
 div {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
-}
-
-#div2{
-
+  padding: 100px;
 }
