--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,17 @@
-body {margin:0;}
+body {
+  margin:0;
+}
+
+div{
+  background-image: url('../assets/vsu_logo.jpg');
+  text-align: center;
+
+}
+
+p{
+  font-size: 15px;
+  font-weight: 600;
+}
         
 ul {
   list-style-type: none;
