--- a/css/about.css
+++ b/css/about.css
@@ -30,3 +30,28 @@ li a:hover:not(.active) {
 .active {
   background-color: red;
 }
+
+
+#links {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#links td, #links th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#links tr:nth-child(even){background-color: #353232;}
+#links tr:nth-child(odd){background-color: #6e6464;}
+
+#links tr:hover {background-color: rgb(66, 61, 61);}
+
+#links th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(221, 69, 9);
+  color: white;
+}
